# WLM-world-model-interpreter-

./: LICENSE.md  README.md  pyproject.toml  setup.cfg
docs/: api.md  mapping-rules.md  overview.md  roadmap.md
examples/: physics_to_structure.md  trajectory_to_structure.md  video_to_structure.md
src/wlm_world_model_interpreter/: __init__.py  api.py  cli.py  lwm_extractor.py  lwm_mapper.py  lwm_parser.py  wlm_emitter.py
tests/: test_end_to_end.py  test_lwm_mapper.py  test_lwm_parser.py  test_wlm_emitter.py
